<resources>
    <string name="app_name">I\'M Here</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="image_logo">logo of I\'M Here app</string>

    <!-- LoginActivity Strings -->
    <string name="email_login">Enter Your Email</string>
    <string name="password_login">Enter Your Password</string>
    <string name="login_button">SIGN IN</string>
    <string name="do_not_have_Account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>

    <!-- CreateAccountActivity Strings -->
    <string name="username_account">Enter Your Name</string>
    <string name="user_email_account">Enter Your Email</string>
    <string name="user_password_account">Enter Your Password</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in_account">Sign In</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="error_invalid_email_not_valid">%s is not a valid email</string>
    <string name="progress_dialog_creating_user_with_firebase">Attempting to create account…</string>

    <!-- User Profile strings -->
    <string name="all_notification_list">Notifications</string>
    <string name="all_friends_list">Friends List</string>
    <string name="user_events">Current Events</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="exit">Exit</string>
    <string name="make_me_invisible">Make Me Invisible</string>
    <string name="help_me">Help Me</string>
    <string name="events">Events</string>
    <string name="detection">Detection</string>
    <string name="sign_out">Sign out</string>
    <string name="events_list">Open Events List</string>
    <string name="location_visible_friends">Make my location visible to friends</string>
    <string name="show_public_flags">Receive public flags </string>
    <string name="show_friends_flags">Receive friends flags</string>
    <string name="new_flag">Create New Flag</string>
    <!-- FriendsListActivity Strings -->
    <string name="friend_location">Where Are You</string>
    <string name="remove_friend">Remove</string>
    <string name="title_activity_notifications">NotificationsActivity</string>

    <!-- NotificationsActivity Strings -->
    <string name="notification_accept">Accept</string>
    <string name="notification_ignore">Ignore</string>
    <string name="notification_friend_request">Wants to be friend</string>

    <!-- EventActivityString -->
    <string name="event_name">Event Title</string>
    <string name="event_Description">Description</string>
    <string name="event_members">Members</string>
    <string name="event_location">Location</string>
    <string name="event_latitude">Lat : </string>
    <string name="event_longitude">Lng : </string>
    <string name="event_map">Map</string>
    <string name="create_event">Create</string>
    <string name="cancel_event">Cancel</string>

    <!-- FlagActivity strings -->
    <string name="create_flag">Create New Flag</string>
    <string name="flag_type">Flag Type</string>
    <string name="flag_screen_note">"*Note: you can choose flag location using map."</string>
    <string name="flag_title">Flag Title</string>
    <string name="flag_description">Flag Details</string>
    <string name="flag_longitude">Lng</string>
    <string name="flag_latitude">Lat</string>
    <string name="flag_map">Map</string>
    <string name="public_flag">Public</string>
    <string name="friends_flag">Friends</string>

    <string name="like_count">Likes Count</string>
    <string name="created_by">like_count</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search Using Email</string>
    <string name="add_friend">Add Friend</string>
    <string name="accept_friend">Accept</string>
    <string name="ignore_friend">Ignore</string>
    <string name="remove_friend_request">Remove Friend Request</string>

    <string name="title_activity_map_">Map_Activity</string>
    <string name="public_flag_map">Public Flag</string>
    <string name="friend_flag_map">Friend Flag</string>
    <string name="your_flag_map">Your Flag</string>
    <string name="person_info_me">ME</string>
    <string name="person_info_friend">FRIEND</string>
    <string name="person_info_need_help">NEED HELP</string>
    <string name="title_activity_event_create">EventCreate</string>
    <string name="title_activity_flag">FlagActivity</string>
    <string name="title_activity_flag_details">FlagDetailsActivity</string>
    <string name="title_activity_create_new_flag">CreateNewFlag</string>
    <string name="title_activity_create_new_event">CreateNewEventActivity</string>
    <string name="title_activity_events_list">EventsListActivity</string>
    <string name="friend_location_on_map">Show friend location on map</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <!-- desc -->
    <string name="create_flag_dec">flag image</string>
    <string name="create_flag_select_image_dec">To select an image from internal device storage</string>
    <string name="create_flag_moving_icon">To move the map to you current position</string>
    <string name="create_flag_invisiable_image">To handle nested scroll</string>
    <string name="rate_image">describe flag votes count</string>
    <string name="empty_image">represent empty list screens</string>
    <string name="loading_sign_in">Sing in ....</string>

    <!-- warning -->
    <string name="empty_warning_friends">You don\'t have any friend yet.</string>
    <string name="empty_warning_notifications">You don\'t have any notifications yet.</string>
    <string name="empty_warning_search">No search results found.</string>
    <string name="flag_delete">*You can delete this flag\n by click on this window.</string>
    <string name="widget_login">You need to Login to the app at first</string>
    <string name="network_connection">Check your network connection</string>
    <string name="empty_field">This field can not be empty.</string>
    <string name="email_verify">You need verify your email first.</string>
    <string name="email_verify_login">"Your account is create, check your email inbox to verify your register"</string>
    <string name="email_reg">This email does not register before.</string>
    <string name="image_loading">Can\'t not load this photo</string>
    <string name="accept_friend_network">You can\'t accept friend request, please check your network connection</string>
    <string name="send_friend_network">You can\'t send friend request, please check your network connection</string>
    <string name="remove_friend_network">You can\'t remove friend, please check your network connection</string>
    <string name="ignore_friend_network">You can\'t ignore friend request, please check your network connection</string>
    <string name="cancel_friend_network">You can\'t cancel friend request, please check your network connection</string>
    <string name="location_network">Your location can\'t update, please check your network connection</string>
    <string name="flag_req">"You must choose flag type."</string>

    <string name="mark_window_duration">Path Duration</string>
    <string name="time_format">hh:mm:ss</string>
    <string name="date_format">EEE, MMM d, h:mm a</string>
</resources>
