<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Switch
        android:id="@+id/location_visible_friend_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/active_tab"
        android:text="@string/location_visible_friends"
        android:textColor="#00796B" />

    <Switch
        android:id="@+id/show_public_flags_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_visible_friend_switch"
        android:layout_marginTop="32dp"
        android:text="@string/show_public_flags"
        android:textColor="#00796B" />

    <Switch
        android:id="@+id/show_friend_flags_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_public_flags_switch"
        android:layout_marginTop="32dp"
        android:text="@string/show_friends_flags"
        android:textColor="#00796B" />


    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/location_visible_friend_switch"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:background="#1DE9B6" />


    <View
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/show_public_flags_switch"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:background="#1DE9B6" />

</RelativeLayout>
