<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/create_flag_scroll_bar"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.here.iam.nagy.mohamed.imhere.ui.properties_ui.Flag.CreateNewFlag">

    <LinearLayout
        android:id="@+id/flag_create_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Create New Flag"
                android:textColor="#1b5e20"
                android:textSize="18sp"
                android:textStyle="bold|normal"
                android:padding="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/flag_title_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLength="28"
                    android:layout_marginLeft="18dp"
                    android:backgroundTint="#1b5e20"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/flag_title"/>

                <RelativeLayout
                    android:id="@+id/flag_image_view_content"
                    android:layout_width="0dp"
                    android:layout_height="122dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/flag_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/empty_flag_image" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_photo_camera_black_18dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:padding="18dp"
                        android:alpha="0.8"/>

                </RelativeLayout>


            </LinearLayout>

            <EditText
                android:id="@+id/flag_details_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:backgroundTint="#1b5e20"
                android:hint="@string/flag_description"
                android:translationZ="3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flag Type"
                android:textColor="#1b5e20"
                android:textStyle="bold|normal"
                android:padding="18dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_marginRight="18dp"
                android:layout_height="1dp"
                android:background="@color/lines_color_safe"
                />

        </LinearLayout>

            <RadioGroup
                android:id="@+id/flag_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/flag_public_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/public_flag"/>

                <RadioButton
                    android:id="@+id/flag_friends_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friends_flag"/>

            </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_location"
                android:textColor="#1b5e20"
                android:textStyle="bold|normal"
                android:padding="18dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_marginRight="18dp"
                android:layout_height="1dp"
                android:background="@color/lines_color_safe"
                />

        </LinearLayout>

            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/flag_latitude_edit_Text"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#1b5e20"
                    android:inputType="numberDecimal"
                    android:hint="@string/event_latitude"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/flag_longitude_edit_Text"
                    android:layout_width="0dp"
                    android:backgroundTint="#1b5e20"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/event_longitude"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_dark"
            android:text="*Note: you can choose flag location using map."/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:translationZ="2dp">

            <fragment
                android:id="@+id/flag_map_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>

            <ImageView
                android:id="@+id/transparent_image_create_flag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:color/transparent"/>

            <ImageView
                android:id="@+id/user_location_create_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin_drop_black_24dp"
                android:tint="#1a237e"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                />

        </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:gravity="end|bottom">

                <Button
                    android:id="@+id/create_flag_button"
                    android:layout_width="wrap_content"
                    android:text="@string/create_event"
                    android:background="@drawable/button_style"
                    android:textColor="#1b5e20"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/cancel_flag_button"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel_event"
                    android:textColor="#1b5e20"
                    android:background="@drawable/button_style"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

</ScrollView>



